--- a/portcrg/package.json
+++ b/portcrg/package.json
@@ -9,10 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-table": "^7.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
