--- a/portcrg/package.json
+++ b/portcrg/package.json
@@ -17,6 +17,7 @@
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-pdf": "^5.7.2",
     "react-table": "^7.8.0"
   },
   "devDependencies": {
