--- a/portcrg/package.json
+++ b/portcrg/package.json
@@ -12,8 +12,10 @@
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
     "axios": "^0.27.2",
+    "date-fns": "^2.29.3",
     "next": "12.2.5",
     "react": "18.2.0",
+    "react-big-calendar": "^1.5.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
