--- a/portcrg/package.json
+++ b/portcrg/package.json
@@ -13,7 +13,10 @@
     "@heroicons/react": "^2.0.11",
     "axios": "^0.27.2",
     "date-fns": "^2.29.3",
+    "install": "^0.13.0",
     "next": "12.2.5",
+    "npm": "^8.19.2",
+    "or": "^0.2.0",
     "react": "18.2.0",
     "react-big-calendar": "^1.5.0",
     "react-datepicker": "^4.8.0",
