--- a/portcrg/package.json
+++ b/portcrg/package.json
@@ -18,7 +18,8 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
-    "react-table": "^7.8.0"
+    "react-table": "^7.8.0",
+    "sweetalert": "^2.1.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
