--- a/portcrg/package.json
+++ b/portcrg/package.json
@@ -12,15 +12,16 @@
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
     "axios": "^0.27.2",
+    "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
+    "moment": "^2.29.4",
     "next": "12.2.5",
     "react": "18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-table": "^7.8.0",
-    "cookie": "^0.5.0",
     "react-pdf": "^5.7.2",
+    "react-table": "^7.8.0",
     "regenerator-runtime": "^0.13.9"
   },
   "devDependencies": {
