--- a/portcrg/package.json
+++ b/portcrg/package.json
@@ -12,10 +12,11 @@
     "@headlessui/react": "^1.7.1",
     "@heroicons/react": "^2.0.11",
     "axios": "^0.27.2",
-    "element-ui": "^2.15.10",
+    "bootstrap": "^5.2.2",
     "cookie": "^0.5.0",
     "cookies-next": "^2.1.1",
     "date-fns": "^2.29.3",
+    "element-ui": "^2.15.10",
     "install": "^0.13.0",
     "moment": "^2.29.4",
     "next": "12.2.5",
@@ -27,10 +28,11 @@
     "react-dom": "18.2.0",
     "react-hook-form": "^7.36.1",
     "react-icons": "^4.4.0",
-    "react-table": "^7.8.0",
-    "sweetalert": "^2.1.2",
     "react-pdf": "^5.7.2",
+    "react-table": "^7.8.0",
+    "reactstrap": "^9.1.4",
     "regenerator-runtime": "^0.13.9",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.4.37"
   },
   "devDependencies": {
