--- a/portcrg/package.json
+++ b/portcrg/package.json
@@ -19,6 +19,7 @@
     "element-ui": "^2.15.10",
     "install": "^0.13.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.38",
     "next": "12.2.5",
     "npm": "^8.19.2",
     "or": "^0.2.0",
@@ -38,6 +39,7 @@
     "autoprefixer": "^10.4.8",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
+    "moment-timezone-data-webpack-plugin": "^1.5.1",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   }
